sass/base.scss
// Font sizes and line heights calculated using golden ratio
// https://grtcalculator.com/

p {
  font-size: 16px;
  line-height: 28px;
}

h1 {
  font-size: 42px;
  line-height: 66px;
}

h2 {
  font-size: 33px;
  line-height: 53px;
}

h3 {
  font-size: 26px;
  line-height: 42px;
}

// My styles

body {
  max-width: 700px;
  margin: 0 auto;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
  background-color: #fafafa;
  color: #111;
}

#header {
  background-color: #111;
  color: #fafafa;
  font-weight: bold;
  padding: 10px;
  border-bottom: 1px solid #111;
}

#content {
  padding: 30px 10px;
  header { border-bottom: 1px solid #bbb; }
}

#footer {
  padding: 0 10px;
  margin-bottom: 100px;
  text-align: center;
  color: #bbb;
  li {
    display: inline;
    margin-right: 10px;
    &:last-child {
      margin-right: 0;
    }
  }
  ul {
    padding-left: 0;
  }
}

img#avatar {
  float: right;
  margin: 20px;
}

h1, h2, h3, h4, h5, h6 {
  margin: 0;
}

blockquote {
  font-style: italic;
  margin-left: inherit;
  padding-left: 20px;
  border-left: 4px solid gray;
}

li {
  margin-bottom: 16px;

  &:last-of-type {
    margin-bottom: inherit;
  }
}

a {
  color: inherit;
}

img {
  display: block;
  margin: auto;
  border-radius: 5px;
  max-width: 100%;
}

pre, code {
  border: 1px solid lightgray;
  border-radius: 5px;
  font-size: 14px;
  font-family: Monaco, Consolas, monospace;
}

pre {
  padding: 10px;
}

code {
  padding: 2px 4px;
}

pre code {
  border: 0;
  padding: 0;
  font-size: 15px;
}

.zola-anchor {
  color: #bbb;
  text-decoration: none;
  margin-left: 10px;
  &:hover { text-decoration: underline; }
}

// Dark mode

@media (prefers-color-scheme: dark) {
  body {
    color: #eee;
    background-color: #111;
  }

  img {
    opacity: 0.75;
  }

  pre {
    filter: invert(100%);
  }
}

